Fix movie title stretching the add window
Fixes: #5096

--- a/frontend/src/Components/Form/RootFolderSelectInputOption.css
+++ b/frontend/src/Components/Form/RootFolderSelectInputOption.css
@@ -15,10 +15,12 @@
 
 .value {
   display: flex;
+  max-width: 500px;
 }
 
 .movieFolder {
-  flex: 0 0 auto;
+  @add-mixin truncate;
+
   color: $disabledColor;
 }
 
